se agrega api para mantener todo en una app

--- a/public/views/indicadores.html
+++ b/public/views/indicadores.html
@@ -1,9 +1,8 @@
+<h2>Indicadores
+</h2>
+
 <ul>
   <li ng-repeat="nemo in nemos">
     <span>{{ nemo.tipo }}</span> {{ nemo.des }}
   </li>
 </ul>
-
-<div>
-
-</div>
