llamada desde el servidor

--- a/public/views/indicadores.html
+++ b/public/views/indicadores.html
@@ -8,6 +8,8 @@
 
 <div ng-repeat="message in messages">{{message.text}}</div>
 
+<div ng-repeat="random in randoms">{{random.num}}</div>
+
 
 <ul>
   <li ng-repeat="nemo in nemos">
